<resources>
    <string name="app_name">AAAA SKINS</string>
    <string name="no_internet_connection">No internet connection available</string>
    <integer name="show_all">109</integer>

    <string name="skins">SKINS</string>
    <string name="install">INSTALL</string>
    <string name="view_text">* View ads to get cool skins!</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="home">HOME</string>
    <string name="favourite">FAVOURITE</string>
    <string name="rate_app">RATE APPS</string>
    <string name="share_app">SHARE APP</string>
    <string name="more_app">MORE APP</string>
    <string name="privacy_polity">PRIVACY POLICY</string>
    <string name="installed_massage">SKIN SAVED TO MINECRAFT PE</string>
    <string name="save_massage">SKIN SAVED IN GALLERY</string>
    <string name="ads_massage">VIEW AD TO GET AWESOME SKIN?</string>
    <string name="loading">Loading...</string>
    <string name="skin_loading_error">Error at skin loading</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="size">Size</string>
    <string name="skin_name_formatted">#SKIN_%s</string>
    <string name="latest">LATEST</string>
    <string name="most_downloads">MOST_DOWNLOADS</string>
    <string name="most_views">MOST VIEWS</string>
</resources>
